--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,9 @@ ENV/
 env.bak/
 venv.bak/
 
+# VS Code settings
+.vscode/
+
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -127,3 +130,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# hls4ml projects
+hls4ml_prj*/
+
+# other 
+*.txt
