--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,7 @@ dependencies:
   - python=3.8
   - pip 
   - pip:
-    - git+https://github.com/jicampos/hls4ml.git@qick#egg=hls4ml[profiling]
+    - git+https://github.com/jicampos/hls4ml.git@qick#egg=hls4ml[profiling]   # v0.8.1, fork with ZCU216 tcl scripts
     - numpy==1.20.3
     - matplotlib
     - tensorflow 
