--- a/environment.yml
+++ b/environment.yml
@@ -4,13 +4,15 @@ channels:
   - anaconda
   - conda-forge
 dependencies:
-  - python=3.8
+  - python=3.10
   - pip 
   - pip:
     - git+https://github.com/jicampos/hls4ml.git@qick#egg=hls4ml[profiling]   # v0.8.1, fork with ZCU216 tcl scripts
-    - numpy==1.20.3
+    - numpy==1.23.5
+    - keras==2.11.0
     - matplotlib
-    - tensorflow 
+    - tensorflow
+    - keras-tuner==1.4.6 
     - qkeras==0.9.0
     - tqdm 
     - h5py
